[joey]fix vertical overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-/* html,
-body {
-  height: 1000%
-} */
-
 body {
   margin: 0;
   font-family: "Lucida Console", "Courier New", monospace;
